# ctxl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yaml
src/contextual/: __init__.py  contextual.py
src/ctxl/: chat_mode.py  chat_mode.py.bk  cli.py  ctxl.py  dependency_analyzer.py  preset_manager.py  system_prompt.txt  version_control.py
src/ctxl/chat/: ai_client.py  chat.py  executor.py  session.py
src/ctxl/utils/: diff_utils.py  file_utils.py  snapshot_utils.py
vscode-ctxl/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
vscode-ctxl/src/: extension.ts
